# e-lims-cookiecutter

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  README.rst  cookiecutter.json  pyproject.toml  setup.cfg  tox.ini
.cache/pypoetry/artifacts/2c/fb/f5/5974459199de1aa9a4e10080ffc21b7573548c6b9e8f914d6daf4a8c49/: pytest_cookies-0.7.0-py3-none-any.whl
.cache/pypoetry/artifacts/3d/e0/69/698a5d503617753ac9c291c1b17cf7a021d0493b4d1c177851b4fe5ef7/: sphinxcontrib_mermaid-0.9.2-py3-none-any.whl
.cache/pypoetry/artifacts/65/16/74/d0ff95d91e451667cf8ddd5868a02248f2e00f19fe7baccad3ba7e0c77/: cruft-2.15.0-py3-none-any.whl
.cache/pypoetry/artifacts/6b/b7/8a/2116df7b24da7698304838bb6f7af6a7308a950a5a64831750c8d4704b/: pre_commit-3.7.1-py2.py3-none-any.whl
.cache/pypoetry/artifacts/80/df/3f/f919d11e1c1600f051e0fcdbc3ef87664dae67e67756e47f5e80aa051d/: identify-2.5.36-py2.py3-none-any.whl
.cache/pypoetry/artifacts/81/86/f0/98e28018fba35a749207144367ef3c2c2a85bd8670018e8943c44ade16/: sphinx_autodoc_typehints-2.2.0-py3-none-any.whl
.github/: CODE_OF_CONDUCT.rst  CONTRIBUTING.rst
.github/ISSUE_TEMPLATE/: bug_report.md  documentation_request.md
.github/workflows/: build.yml  ci.yml  ci2.yml  documentation.yml  linters.yml  main.yml  pull_request.yml  tag.yml  tests.yml
docs/: index.rst  license.rst
docs/source/: conf.py  index.rst
hooks/: __init__.py  post_gen_project.py  pre_gen_project.py
html/: .buildinfo  genindex.html  objects.inv  readme.html  search.html  searchindex.js
tests/: __init__.py  test_post_hook.py  test_pre_hook.py
{{cookiecutter.project_slug}}/: .editorconfig  CONTRIBUTING.md  README.md  README.rst  pyproject.toml  tox.ini
{{cookiecutter.project_slug}}/.github/ISSUE_TEMPLATE/: bug_report.md
{{cookiecutter.project_slug}}/.github/workflows/: ci.yml  pull_request.yml  tag.yml  {{cookiecutter.project_slug}}_pull_request.yml
{{cookiecutter.project_slug}}/docs/: conf.py  index.rst  requirements-docs.txt
{{cookiecutter.project_slug}}/docs/source/: conf.py
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.project_slug}}.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py  {{cookiecutter.project_slug}}.py
