[tool.poetry]
name = "e-lims-cookiecutter-template"
version = "0.0.1"
description = "E-lims Cookiecutter Template."
readme = "README.rst"
authors = ["Fabien Meyer <fabien-meyer@outlook.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
typing-extensions = "^4.12.2"

pytest = {version = "^8.2.2", optional = true}
pytest-cov = {version = "^5.0.0", optional = true}
pytest-cookies = {version = "^0.7.0", optional = true}
tox = {version = "^4.15.1", optional = true}

sphinx = {version = "^7.3.7", optional = true}
sphinx-autodoc-typehints = {version = "^2.1.1", optional = true}
sphinx-rtd-theme = {version = "^2.0.0", optional = true}
sphinxcontrib-mermaid = {version = "^0.9.2", optional = true}

[tool.poetry.group.dev.dependencies]
bump2version = "^1.0.1"
black = "^24.4.2"
cookiecutter = "^2.6.0"
cruft = "^2.15.0"
mypy = "^1.10.0"
pre-commit = "^3.7.1"
ruff = "^0.4.8"

[tool.poetry.extras]
doc = ["sphinx", "sphinx-autodoc-typehints", "sphinx-rtd-theme", "sphinxcontrib-mermaid"]
tests = ["pytest", "pytest-cookies", "pytest-cov", "tox"]

[build-system]
requires = []
build-backend = "poetry.core.masonry.api"