[tool.poetry]
name = "e-lims-cookiecutter-template"
version = "0.0.1"
description = "E-lims Cookiecutter Template."
readme = "README.rst"
authors = ["Fabien Meyer <fabien-meyer@outlook.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
typing-extensions = "^4.12.2"

pytest = {version = "^8.2.2", optional = true}
pytest-cov = {version = "^5.0.0", optional = true}
pytest-cookies = {version = "^0.7.0", optional = true}
tox = {version = "^4.15.1", optional = true}

myst-parser = {version = "^3.0.1", optional = true}
sphinx = {version = "^7.3.7", optional = true}
sphinx-autodoc-typehints = {version = "^2.1.1", optional = true}
sphinx-rtd-theme = {version = "^2.0.0", optional = true}
sphinxcontrib-mermaid = {version = "^0.9.2", optional = true}

[tool.poetry.group.dev.dependencies]
bandit = "^1.7.8"
bump2version = "^1.0.1"
cookiecutter = "^2.6.0"
cruft = "^2.15.0"
mypy = "^1.10.0"
pre-commit = "^3.7.1"
ruff = "^0.4.8"
safety = "^3.2.3"

[tool.poetry.extras]
doc = ["myst-parser", "sphinx", "sphinx-autodoc-typehints", "sphinx-rtd-theme", "sphinxcontrib-mermaid"]
tests = ["pytest", "pytest-cookies", "pytest-cov", "tox"]

[tool.bumpversion]
current_version = "0.0.1"
commit = true
tag = false

[tool.bumpversion.file]
file = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"

[tool.mypy]
follow_imports = "normal"
strict_equality = true
warn_unused_configs = true
disallow_subclassing_any = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true

[[tool.mypy.overrides]]
module = "tests"
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = "pytest"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pytest_cookies"
ignore_missing_imports = true

[tool.bandit]
log_level = "INFO"
severity = ["HIGH"]
confidence = ["HIGH"]

[build-system]
requires = []
build-backend = "poetry.core.masonry.api"